methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:6: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
        if (isFacingTrail()){
                         ^SlugSnail:26: error: value c is not a member of object java.awt.Color
  piste=getCouleurSol()==Color.c
                               ^