methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     // Write your code here

  while (!estSurBiscuit()){ 
        if (isFacingTrail()){
           baisseBrosse()
           avance()
           leveBrosse()
        }
       else gauche()
       
  }
  prendBiscuit()
}



def isFacingTrail(c:Color):Boolean = {
    
  var piste: Boolean = false
  if (estFaceMur()){
    return false
  }
  avance()
  piste=getCouleurSol()==Color.c
  
  recule()
  return piste
}